bin/testsuite/tests/compiler/src/errors/compiler2146.swg
#global testerror "Err0691"

struct P {}

alias Alias = P
impl Alias
{
    func toto(me) {}
}
